more heuristics